--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background-color: rgba(38, 212, 177, 0.904);
+    background-image: url('https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-2766.jpg');
+    background-position: center;
     font-family: 'Orbitron';
 }
 label{
